style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Sans-serif;
}
.overlay{
    width: 100%;
    height: 100%;
    position: fixed;
    
    z-index: 1;
}
.active{
background-color: rgba(0,0,0,0.5);
}

nav{
    width: 100%;
    background-color: transparent;
    height: 7vh;
    display: flex;
    justify-content: space-between;
    position: fixed;
    align-items: center;
    transition: background-color 0.2s ease-in-out;
}
.btn-menu{
    background-color: transparent;
    border-radius: 50%;
    border: none;
    margin-right: 25px;
    cursor: pointer;
    font-size: 25px;
    margin-left:25px ;
    &:hover{
    box-shadow: -1px 5px 47px 0px rgba(0,0,0,0.75);
    }
}
.span-menu{
    margin-left: 25px;
}
.span-register{
    margin-right: 25px;
    
}
.span-menu, .span-register {
    display: flex;
    align-items: center;
    height: 100%;
}
.span-menu a, .span-register a{
    color: black;
    text-decoration: none;
    font-weight: 600;
    font-size: 26px;
}
.btn-Login, .btn-register,.btn-location {
    height: auto;
    padding: 10px 20px;
    margin-left: 10px;
    cursor: pointer;
    border-radius: 25px;
    border: none;
    font-size: 20px;
    margin:  0 25px;
}
.btn-Login{
    color: black;
    background-color: white ;
    &:hover{
        background-color: rgb(235, 227, 227);
    }
}
.btn-register, .btn-location{
    color: white;
    background-color: black;
    &:hover{
        background-color: rgb(65, 63, 63);
    }
}
.btn-location{
    display: none;
    transition: display 0.8s ease-in-out;
}
header{
    height: 100vh;
    background-image: url(img/baner.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    justify-content: flex-start;
    align-items: center;
   
}
.header-container h1{
    font-size: 72px;
    margin: 45px;
}
.order-container {
    display: flex;
    align-items: flex-start;
    gap: 15px;
}
.input-container{
 
 margin: 0;
 margin-left: 25px;
 background-color: white;
 width: 100%;
 border-radius: 10px;
display: flex;
justify-content: flex-start;
align-items: center;
height: 76px;
position: relative;

}
.input-container input{
    border: none;
    outline: none;
    background-color: transparent;
    font-size: 26px;
    width: 100%;
}
.input-container::after{
 content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width:100%;
    height: 0;
    background-color: rgb(0, 132, 255);
    border-bottom-left-radius:10px ;
    border-bottom-right-radius:10px ;
    transition: height 0.3s ease-in-out;
}
.input-container:has(input:focus)::after{
   height: 4px;
}
.input-container i{
    font-size: 36px;
    margin: 25px;
    margin-right: 15px;
    box-shadow: inset 0px -1px 0px #F3F3F3;;
}
.order-list-container{
    
    display: flex;
    flex-direction: column;
    
    width: 30%;  

}
.order-list{
    padding-left: 0;
     background-color: white;
    color: black;
    width: 110%;
    text-align: center;
    height: 76px;  
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    font-weight: 700;
    cursor: pointer;
    
}
.order-list:first-child{
    border-bottom: 1px solid #d4d4d4;
}
.order-list:nth-child(2):hover,.order-list:nth-child(3):hover{
    background-color: #F3F3F3;
}
.order-list i {
    margin-right: 8px;
}
.hidden{
    visibility: hidden;
}
.order-button{
    height: 76px;
    padding: 8px;
    margin-left: 15px;
    width: 40%;
    color: white;
    background-color: black;
    font-size: 26px;
    border-radius: 18px;
    cursor: pointer;
    &:hover{
         background-color: rgb(65, 63, 63);
    }
}
.span-dropdown{
    margin-left: 15px;
}
.paragraph-Login{
    margin: 25px;
    font-size: 23px;

    margin-top: 0;
}

.paragraph-Login a{
    
    color: black;
}
.menu-container{
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 150px 0;
    
}
.menu-block{
    width: 30%;
    margin: 0 20px;
    cursor: pointer;
}

.menu-block img{
    width: 100%;
}

.menu-block h2{
 font-weight: 700;
 font-size: 35px;
 margin-bottom: 20px;
}

.menu-block p{
    font-size: 25px;
}
.menu-block a{
    color: black;
}
.towns-section, .countries-section{
    height: auto;
    margin: 0 70px;
     margin-bottom: 80px;
}
.towns-header, .countries-header{
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
   
}
.towns-header h2, .countries-header h2{
     font-weight: 700;
 font-size: 52px;
 margin-bottom: 20px;
 
 
}
.towns-header a, .countries-header a{
    color: black;
    font-size: 28px;
}
.map-container{
    width: 100%;
    margin-top: 20px;
}
.towns-list{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(6, 1fr);
    gap: 30px;
    font-size: 23px;
    margin-top: 25px;
    grid-auto-flow: column;
   
    
    
}
.town, .country{
    cursor: pointer;
}
.countries-list{
     display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(8, 1fr);
    gap: 30px;
    font-size: 23px;
    margin-top: 25px;
    grid-auto-flow: column;
}
    
footer{
    height: 55vh;
}
.informations, .privacy{
    padding-left: 20%;
    padding-right: 20%;
}

.informations{
    border-top: 1px solid #ecebeb;
    border-bottom: 1px solid #ecebeb;
    height: 35vh;
    display: flex;
}
.informations img{
    height: 150px;
    width: 250px;
}
.download-apps{
    display: flex;
}
.logos{
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 35px;
}
.logos img{
    cursor: pointer;
}
.download-apps img{
    width: 120px;
    height: 70px;
     margin-left: 10px;
}
.info-list{
   display: flex;
}

.info-list-container{
    display: flex;
    align-items: center;
    margin-left: 30%;
}
.info-list{
    margin: 15px;
}
.info-list li{
    list-style-type: none;
    font-size: 1.4em;
   margin-bottom: 24px;
     &:hover{
        cursor: pointer;
        text-decoration: underline;
     }
}

.privacy{
    height: 20vh;
    margin-top: 30px;
}
.privacy i{
    font-size: 30px;
    margin-left: 20px;
    margin-right: 15px;
}
.privacy-links a{
    margin-right: 15px;
    cursor: pointer;
    font-size: 17px;
   &:hover{
    text-decoration: underline;
   }
   
}
.medias-container{
    display: flex;
}
.medias i{
    cursor: pointer;
}
.privacy-info{
    margin-top: 35px;
    font-size: 25px;
    display: flex;
}
.privacy-info a:hover{
    cursor: pointer;
    text-decoration: underline;
}

